<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    android:gravity="center"
    android:orientation="vertical"
    android:scrollbarSize="4dp"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/textView_signup_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_welcome"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="280dp"
        android:contentDescription="@string/signup_image"
        app:srcCompat="@drawable/pokemonprofessor" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="26dp" />

    <TextView
        android:id="@+id/textView_signup_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_registertitle"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="13dp" />

    <EditText
        android:id="@+id/editText_signup_email"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/signup_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editText_signup_password"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/signup_password"
        android:inputType="textPassword"
        tools:ignore="TextContrastCheck" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="13dp" />

    <TextView
        android:id="@+id/textView_signup_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/signup_login"
        android:textColor="#000000"
        android:textSize="16sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="26dp" />

    <Button
        android:id="@+id/button_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:text="@string/signup_register"
        tools:ignore="TextContrastCheck" />

</LinearLayout>