<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".PokeColFrag">

    <androidx.cardview.widget.CardView
        android:layout_width="484dp"
        android:layout_height="wrap_content"
        android:padding="18dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_PokeCol"
            android:layout_width="410dp"
            android:layout_height="wrap_content"
            android:background="@color/yellow" />

    </androidx.cardview.widget.CardView>


    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView_PokeFocus2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="@string/pokeCol_img"
            android:layout_margin="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/textView_nameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nameLabel" />

            <TextView
                android:id="@+id/textView_pokeCollect_name2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="20sp"
                android:padding="10dp" />

            <TextView
                android:id="@+id/textView_pokeslots_species_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pokecol_species" />

            <TextView
                android:id="@+id/textView_pokeCol_species"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pokecol_species"
                android:textSize="15sp"
                android:padding="10dp" />

            <TextView
                android:id="@+id/textView_LevelLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/levelLabel" />

            <TextView
                android:id="@+id/textView_pokeCollect_Level2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/level"
                android:textSize="15sp"
                android:padding="10dp" />
        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/button_pokeCol_setMain2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/button_pokeCollection"
        android:textColor="@color/white"
        app:backgroundTint="@color/orange" />

</LinearLayout>