<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/imageView_PokemonMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PokemonMainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="664dp"
        android:orientation="vertical">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="100dp" />

        <ImageView
            android:id="@+id/imageView_pokemonMain"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/background"
            android:contentDescription="@string/main_image"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textView_PokeName"
            style="@android:style/TextAppearance.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/pokename" />

        <TextView
            android:id="@+id/textView_affectionLevel"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/affectionlevel" />

        <ProgressBar
            android:id="@+id/progressBar_mainFrag_AffectionProgress"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:max="100"
            android:progress="0" />

        <TextView
            android:id="@+id/textView_AffectionProgress"
            style="@android:style/TextAppearance.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/affectionprogress" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:layout_gravity="bottom"
            android:gravity="bottom|center"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_pet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_pet"
                app:backgroundTint="@color/orange" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_feed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Main_feed"
                app:backgroundTint="@color/orange" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_bath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Main_bath"
                app:backgroundTint="@color/orange" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <Button
            android:id="@+id/button_maincol_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/orange"
            android:text="@string/main_save" />

    </LinearLayout>

</FrameLayout>
